# thc

./: README.md  thc.cabal
app/: Main.hs
src/FileFormat/: Macho.hs
src/OS/: Darwin.hs
src/Thc/: Asm.hs  Code.hs  Compiler.hs  Expr.hs  Tac.hs  Type.hs
src/Thc/Code/: Amd64.hs
src/Thc/Expr/: Indexed.hs
test/FileFormat/: MachoSpec.hs
test/FileFormat/data/: binary
test/Thc/: AsmSpec.hs  CompilerSpec.hs  TacSpec.hs  TypeSpec.hs
test/Thc/Expr/: IndexedSpec.hs
test/Thc/data/: exit1  exit100  exit178  exit81
