name:                thc
version:             0.1.0.0
synopsis:            thc
homepage:            https://github.com/elpinal/thc#readme
license:             MIT
license-file:        LICENSE
author:              El Pin Al
maintainer:          example@example.com
copyright:           2017 El Pin Al
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         The thc.

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Thc.Expr
                     , Thc.Tac
                     , Thc.Asm
                     , Thc.Code
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable thc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thc
  default-language:    Haskell2010

test-suite thc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , thc
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elpinal/thc
